* 0.8.5 (2013-09-28)
- fix repoquery when a package update exists for C lib

* 0.8.4 (2013-09-28)
- use repoquery to determine extra C library dependencies
- quote "pkgconfig(foo)" for rpm query and yum install
- show sudo command before sudo password prompt appears
- exclude hsc2hs from build tool deps
- devel provides ghc-<pkg>-static
- drop release from initial changelog entry for packager to add an entry
- do not try to fetch tarball for a darcs or git source dir

* 0.8.3 (2013-07-12)
- only try to install missing dependencies
- for executables depending on own lib add BR chrpath and %ghc_fix_dynamic_rpath
- word-wrap generic descriptions
- map ffi to libffi
- move modules to toplevel
- Rpm module split into Spec and Build in Commands/

* 0.8.2 (2013-07-02)
- handle pkg-ver arg, and check cabal list is non-empty
- sort all generated deps
- use yum-builddep again to install deps
- copy tarball into cwd for rpmbuild
- warn about long synopsis rather than multiline
- wrap after end of sentence near end of line
- use _isa in requires ghc-<pkg>
- --version now outputs to stdout
- new --force flag to overwrite existing .spec file

* 0.8.1 (2013-06-14)
- word wrapping of descriptions
- use generic description for shared subpackage
- simplify logic for summary and description processing

* 0.8.0 (2013-05-31)
- new simplier revision to Fedora Packaging
  - drop %common_summary and %common_description
  - drop %ghc_package, %ghc_description, %ghc_devel_package,
    %ghc_devel_description, %ghc_devel_post_postun, %ghc_files,
    and %ghc_devel_requires
- check external programs available before use
- tweaks for ghc-7.6.3 and Cabal-1.16

* 0.7.1 (2013-03-22)
- add final full-stop to description if missing
- add ver-rel to initial changelog entry
- fix use of cblrpm-diff force lib option
- output warning when .spec already exists
- fix handling of package names that end in a digit
- output when trying a path
- map curl C dep to libcurl

* 0.7.0 (2013-01-22)